使用本地图片

--- a/src/containers/index.less
+++ b/src/containers/index.less
@@ -26,7 +26,7 @@ body{
   }
 
   .bg{
-    background:url('//img.alicdn.com/tps/TB1qq7kNXXXXXacXFXXXXXXXXXX-400-186.png') no-repeat;
+    background:url('../resource/image/TB1qq7kNXXXXXacXFXXXXXXXXXX-400-186.png') no-repeat;
     overflow:hidden;
   }
 }
